# MIREA_database_administration

./: .env.example  .envrc  .gitmodules  README.md  activate  docker-compose.yml  mongoexec  mongosh
practice1/: README.md  activate  init.js  practice1_report.docx
practice2/: Dockerfile  practice2_report.docx
practice3/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  nginx.conf  practice3_report.docx  pyproject.toml  requirements.txt
practice3/src/: db.py  main.py  models.py  routes.py  services.py  settings.py
practice4/: practice4_report.docx
practice5/: practice5_report.docx
practice6/: practice6_report.docx
practice6/mongo/replication/: docker-compose.yml
practice6/mongo/replication/scripts/: init.js  rs-init.sh
practice6/mongo/sharding/: docker-compose.yml
practice6/mongo/sharding/scripts/: config-init.sh  shard-init.sh
practice6/postgres/: docker-compose.yml
